feat: adicionar as mudanças de instalação e armazenamento de acordo com o vídeo de Philipp Lackner